# airflow-postgres-etl

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  README.md  credentials.json.example  mwaa-local-env  pyproject.toml
dags/: sample_dag.py
dags/datahelper/: __init__.py  postgres.py
dags/postgres_etl/: events_table.py  postgres_etl.py  sample_dag.py  tracking_table.py
data/extracted/: 20230904-130005159.csv  20230904-130010492.csv  20230904-130015670.csv  20230904-130021735.csv  20230904-130027650.csv  20230904-130032618.csv  20230904-130037455.csv  20230904-130042707.csv  20230904-130048118.csv  20230904-130053257.csv  20230904-130058571.csv  20230904-130103645.csv  20230904-130109137.csv  20230904-130114587.csv  20230904-130119842.csv  20230904-130124986.csv  20230904-130129968.csv  20230904-130135027.csv  20230904-130139793.csv  20230904-130144805.csv  20230904-130150054.csv  20230904-130155042.csv  20230904-130200435.csv  20230904-130205488.csv  20230904-130210713.csv  20230904-130216111.csv  20230904-130221255.csv  20230904-130226615.csv  20230904-130231758.csv  20230904-130236802.csv  20230904-130241592.csv  20230904-130247295.csv  20230904-130248145.csv  20230904-130252651.csv  20230904-130258016.csv  20230904-130303235.csv  20230904-130308793.csv  20230904-130313551.csv  20230904-130318495.csv  20230904-130323784.csv  (+841 more)
initial-script/: extract-zip.py
local-run/: Dockerfile  docker-compose.yml  local-config.sh  local-run  providers.txt
plugins/: README.md
